--- a/public/styles.css
+++ b/public/styles.css
@@ -2,8 +2,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   font-size: clamp(1rem, 1.5vw, 1.25rem);
   background-color: var(--bg-color);
@@ -12,10 +12,9 @@ body {
 }
 
 #taplist {
-  max-width: 90vw;
-  max-height: 95vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -25,18 +24,18 @@ body {
   text-align: center;
   font-size: clamp(2rem, 5vw, 4rem);
   margin: 0;
+  padding-top: 2rem;
 }
 
 .tap-category {
   font-size: clamp(2rem, 4vw, 3.5rem);
-  margin-bottom: 1rem;
   border-bottom: 2px solid var(--text-color);
-  padding-bottom: 0.5rem;
+  margin-block: 0;
 }
 
 .tap-group {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: var(--card-gap);
   width: 100%;
 }
@@ -49,7 +48,7 @@ body {
   border: 2px solid var(--card-border-color);
   border-radius: var(--card-border-radius);
   padding: var(--card-padding);
-  min-width: 0;
+  min-width: 300px;
   align-items: center;
 }
 
@@ -77,15 +76,25 @@ body {
   margin: 0;
 }
 #taplist-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 3rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   align-items: start;
-  width: 100%;
+  padding-inline: 2rem;
 }
 .wrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+}
+#taplist-container.fade-out {
+  opacity: 0;
+  transition: opacity 0.6s ease-out;
+}
+
+#taplist-container.fade-in {
+  opacity: 1;
+  transition: opacity 0.6s ease-in;
 }
