--- a/public/styles.css
+++ b/public/styles.css
@@ -99,3 +99,60 @@ body {
   opacity: 1;
   transition: opacity 0.6s ease-in;
 }
+
+@media (max-width: 1280px) {
+  html,
+  body {
+    font-size: 0.85rem;
+  }
+
+  #title {
+    font-size: 2rem;
+    padding-top: 1rem;
+  }
+
+  .tap-category {
+    font-size: 1.5rem;
+  }
+
+  .tap-image {
+    width: 70px;
+  }
+
+  .tap-card {
+    padding: 0.75rem;
+    gap: 0.5rem;
+  }
+
+  .tap-content h2 {
+    font-size: 1.1rem;
+  }
+
+  .tap-content p {
+    font-size: 0.95rem;
+  }
+
+  #taplist {
+    gap: 1rem;
+  }
+
+  #taplist-container {
+    padding-inline: 1rem;
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 3840px) {
+  html,
+  body {
+    font-size: 1.5rem;
+  }
+
+  .tap-image {
+    width: 150px;
+  }
+
+  .tap-card {
+    padding: 2rem;
+  }
+}
